Extract the mediainfo component

--- a/app/containers/Home/ScrapeInfoModal/index.less
+++ b/app/containers/Home/ScrapeInfoModal/index.less
@@ -11,56 +11,9 @@
   .left_sider {
     background-color: #fff;
     padding: 24px 24px 0 30px;
+    min-height: 500px;
   }
   // .timeline_item {
   //   display: flex;
   // }
-  .media_title {
-    font-size: 18px;
-    font-weight: 800;
-    padding: 20px 0;
-  }
-  .media_info {
-    font-size: 16px;
-    .info_item {
-      display: flex;
-      flex-wrap: wrap;
-      padding: 5px 0;
-      .info_label {
-        font-weight: 800;
-      }
-      .info_text {
-        font-size: 14px;
-      }
-    }
-    .uniqueid {
-      color: #cc0000;
-    }
-    .genre,
-    .actor {
-      display: flex;
-      flex-wrap: wrap;
-      width: 100%;
-      padding: 10px 0;
-    }
-    .actor {
-      figure {
-        background-color: #fff;
-        overflow: hidden;
-        margin: 5px;
-        padding: 10px;
-        border: none;
-        border-radius: 0px;
-        box-shadow: 0 1px 3px rgba(0, 0, 0, 0.3);
-      }
-      figcaption {
-        text-align: center;
-        padding: 5px 0 0 0;
-        width: 120px;
-      }
-      img {
-        width: 120px;
-      }
-    }
-  }
 }
