feat(media):Modify the model structure  the media information is echoed

--- a/app/components/MediaInfo/index.less
+++ b/app/components/MediaInfo/index.less
@@ -10,6 +10,7 @@
   overflow: hidden;
   min-height: 500px;
   padding-bottom: 20px;
+  color: #333;
   .info_item {
     display: flex;
     flex-wrap: wrap;
