feat(scraper): multi
Multi-scenario, multi-information source support, reorganize scraper, increase settings

--- a/app/app.global.css
+++ b/app/app.global.css
@@ -1,6 +1,6 @@
 body {
   position: relative;
-  color: white;
+  color: #333;
   height: 100vh;
   background-color: #8ec5fc;
   background-image: linear-gradient(62deg, #8ec5fc 0%, #e0c3fc 100%);
